hopefully fixes styling and wrapping for preferred citation

--- a/web/themes/custom/asulib_barrio/scss/style.scss
+++ b/web/themes/custom/asulib_barrio/scss/style.scss
@@ -166,7 +166,14 @@ img { width: 100%; }
 }
 .interact > div {
   margin-bottom: 2.5rem;
-  word-break: break-all;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .citation ul {
